White Space Fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap');
 
+/* Fix for white space caused by bootstrap row class */
+
+.row {
+    padding-right: 0px;
+    margin-right: 0px;
+  }
+
 /* Navbar */
 
 .bg-body-tertiary {
